--- a/Page.html
+++ b/Page.html
@@ -10,7 +10,7 @@
 <body class="bg-red-200 pointer">
     <div>
         <div class="flex items-center justify-center header px-8 mt-12 text-semibold font-mono text-bold text-rose-500 text-4xl">
-           <h1>CAN YOU GET ME AN BUTTERSCOTCGITH ICECREAM? <br>
+           <h1>CAN YOU GET ME ICECREAM? <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PLEASE!!!</h1>
         </div>
         <div class= "flex justify-center items-center hover:">
