--- a/yes.html
+++ b/yes.html
@@ -19,7 +19,7 @@
         <div class="confetti"></div>
         <div>
             <h1>
-            &nbsp;&nbsp;&nbsp;&nbsp; YAYYYYY! <br>
+            &nbsp;&nbsp;&nbsp;&nbsp; YAYYY! <br>
               I LOVE YOU!!! </h1>
         </div>
         <div class="idkwhat">
