--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-red-200 pointer">
-    <div>
-        <div class="flex items-center justify-center header px-8 mt-12 text-semibold font-mono text-bold text-rose-500 text-4xl">
+    <div class="pt-20">
+        <div class="flex items-center justify-center header px-8 text-semibold font-mono text-bold text-rose-500 text-4xl">
            <h1>CAN YOU GET ME ICECREAM? <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PLEASE!!!</h1>
         </div>
